objdir/test/spec/bad/TC5038_DisallowAnnotationClass.vtt
WEBVTT

00:11.000 --> 00:15.000
We <c Annotation Here>are in New York City</c>